--- a/OctGL/OctGL.csproj
+++ b/OctGL/OctGL.csproj
@@ -95,6 +95,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Octree.ico" />
+    <Content Include="SampleModels\Dragon\dragon.bmp" />
+    <Content Include="SampleModels\Dragon\DRAGON.JPG" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
@@ -105,7 +107,11 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="SampleModels\Dragon\dragon.FBX" />
+    <None Include="SampleModels\Dragon\dragon.mtl" />
+    <None Include="SampleModels\Dragon\dragon.OBJ" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <Import Project="..\packages\AssimpNet.4.1.0\build\AssimpNet.targets" Condition="Exists('..\packages\AssimpNet.4.1.0\build\AssimpNet.targets')" />
