--- a/OctGL/OctGL.csproj
+++ b/OctGL/OctGL.csproj
@@ -96,6 +96,7 @@
     </Content>
     <Content Include="Octree.ico" />
     <Content Include="Resources\demo.gif" />
+    <Content Include="Resources\SampleLevels.jpg" />
     <Content Include="SampleModels\Dragon\dragon.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
