Added sphere.3ds sample

--- a/OctGL/OctGL.csproj
+++ b/OctGL/OctGL.csproj
@@ -128,6 +128,9 @@
     <None Include="SampleModels\General\cylinder.3ds">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="SampleModels\General\sphere.3ds">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="SampleModels\General\holes.3ds">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
